--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,6 +21,5 @@
     "react": "18.2.0",
     "react-dom": "18.2.0"
     
-  },
-  "homepage":"."
+  }
 }
