--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -1,37 +1,40 @@
-name: learn-github-actions
-on: [push]
+name: GetData_app
+
+on:
+  push:
+
+  pull_request:
+    branches:
+      - main
+
 jobs:
-  # build job
   build:
-    # name of the job
     name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-      - name: Install node 16
-        uses: actions/setup-node@v1
+      - name: Install Node 16
+        uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - name: Install NPM Dependencies
+      - name: Install dependencies
         run: npm i
-      - name: Build Project
+      - name: build project
         run: npm run build
       - name: Upload artifact in order to deploy
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: production-files
           path: ./build
-  # deployed job
+
   deploy:
     name: Deploy
-    # The os to run the job on
     runs-on: ubuntu-latest
     needs: build
-    
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v2
         with:
           name: production-files
           path: ./build
